# augur

./: .gitignore  Cargo.toml
docs/specs/: 2026-04-03-augur-oasis-rust-port-design.md  2026-04-03-engine-improvements-research.md
examples/: reddit_simulation.rs  twitter_simulation.rs
src/: channel.rs  clock.rs  env.rs  env_action.rs  lib.rs  types.rs
src/agent/: action.rs  environment.rs  generator.rs  graph.rs  mod.rs
src/db/: mod.rs  queries.rs  schema.rs
src/llm/: mod.rs  openai.rs  tools.rs
src/platform/: config.rs  mod.rs
src/recsys/: embeddings.rs  mod.rs  onnx_embedder.rs  random.rs  reddit.rs  twhin.rs  twitter.rs
tests/: agent_graph_tests.rs  channel_tests.rs  clock_tests.rs  db_tests.rs  integration_tests.rs  platform_tests.rs  recsys_tests.rs
tests/common/: mod.rs
